# Django-task-manager

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
manager/: urls.py  views.py
manager/templates/manager/: task_manager.html
task_manager/: settings.py  urls.py
templates/: base.html
templates/inc/: _nav.html
