[tool.poetry]
name = "Django-TODO"
version = "0.1.0"
description = "Simple task manager"
authors = ["SadLaboka <jitubuh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-coverage = "^0.0"
ipython = "^8.4.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
